# multimodal-survival-fusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md
configs/data/: example.yaml  local.yaml
configs/experiments/: clinical_unimodal.yaml  concat.yaml  concat_clinical_embedding.yaml  gated_concat.yaml  gated_concat_clinical_embedding.yaml  lowrank_bilinear.yaml  lowrank_bilinear_clinical_embedding.yaml  pathology_unimodal.yaml  rna_unimodal.yaml  survpgc.yaml  survpgc_category.yaml  survpgc_scfoundation.yaml
configs/experiments/bimodal/: concat_pathology_clinical.yaml  concat_pathology_clinical_embedding.yaml  concat_rna_clinical.yaml  concat_rna_clinical_embedding.yaml  concat_rna_pathology.yaml  gated_pathology_clinical.yaml  gated_pathology_clinical_embedding.yaml  gated_rna_clinical.yaml  (+7 more)
docs/: data_format.md
legacy/: concat_uni_cv.py  fusion_modules.py  gated_uni_cv.py  lowrank_bilinear_uni_cv.py
legacy/rna_extractors/: README.md  __init__.py  base.py  example_integration.py  variance_filter.py
legacy/survpgc_unified/: README.md  __init__.py  rna_token_plans.py  survpgc_model.py  train_survpgc.py
legacy/unimodal/: clinical_unimodal_bertconch.py  pathology_unimodal_cox.py  rna_unimodal_variance_filter_cox.py
resources/: README.md
resources/biological_categories/: biological_categories.csv
resources/templates/: clinical_embedding_sentence_templates.csv
scripts/: make_folds.py  train_cv.py  train_late_fusion.py  train_survpgc.py  train_two_modality.py  train_unimodal.py
src/mm_survival/: __init__.py
(+50 files in other folders)
