[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-survival"
version = "0.1.0"
description = "Multimodal survival prediction research code"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
